# tdr-gui

./: README.md  pyinstaller.spec  pyproject.toml  tests.py
.github/workflows/: pyinstaller-package.yml
src/tdr_plots/: __init__.py  cli.py  live_plot.py
src/tdr_plots/tdr01_control/: __init__.py  common.py  control.py
